Quiz Ui Finished

--- a/app/src/main/res/layout/activity_quiz_question.xml
+++ b/app/src/main/res/layout/activity_quiz_question.xml
@@ -19,7 +19,119 @@
         <TextView
             android:id="@+id/question"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textAlignment="textStart"
+            android:textColor="#363A43"
+            android:textSize="20dp"
+            android:text="A program which translates a high-level language program into a machine language program is called ?"
+            />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/ic_launcher_background"
+
+            />
+
+        <!--    Progress bar    -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            >
+
+            <ProgressBar
+                android:id="@+id/pbar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="9"
+                android:max="10"
+                android:minHeight="15dp"
+                android:progress="0"
+                android:indeterminate="false"
+                />
+
+            <TextView
+                android:id="@+id/progress"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textAlignment="center"
+                android:textColor="#363A43"
+                android:text="0/10"
+                />
+
+
+        </LinearLayout>
+
+<!--        Options    -->
+        <TextView
+            android:id="@+id/option1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/def_op_border"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:textColor="#363A43"
+            android:text="Compiler"
+            android:padding="15dp"
+            android:textSize="18sp"
+            />
+
+        <TextView
+            android:id="@+id/option2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/def_op_border"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:textColor="#363A43"
+            android:text="Interpreters"
+            android:padding="15dp"
+            android:textSize="18sp"
+            />
+
+        <TextView
+            android:id="@+id/option3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/def_op_border"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:textColor="#363A43"
+            android:text="Both (A) and (B)"
+            android:padding="15dp"
+            android:textSize="18sp"
+            />
+
+        <TextView
+            android:id="@+id/option4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/def_op_border"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:textColor="#363A43"
+            android:text="None of the above"
+            android:padding="15dp"
+            android:textSize="18sp"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:textAllCaps="false"
+            android:layout_margin="10dp"
+            android:paddingVertical="15dp"
+            android:textSize="18sp"
+            />
 
 
     </LinearLayout>
