--- a/app/src/main/res/layout/activity_quiz_question.xml
+++ b/app/src/main/res/layout/activity_quiz_question.xml
@@ -23,15 +23,17 @@
             android:layout_margin="10dp"
             android:textAlignment="textStart"
             android:textColor="#363A43"
-            android:textSize="20dp"
+            android:textSize="24dp"
+            android:lineHeight="30dp"
+            android:textStyle="bold"
             android:text="A program which translates a high-level language program into a machine language program is called ?"
             />
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/qimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:src="@drawable/ic_launcher_background"
+
 
             />
 
@@ -53,11 +55,12 @@
                 android:max="10"
                 android:minHeight="15dp"
                 android:progress="0"
+                android:progressTint="#FF2C145E"
                 android:indeterminate="false"
                 />
 
             <TextView
-                android:id="@+id/progress"
+                android:id="@+id/qprogress"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
@@ -72,6 +75,7 @@
 
 <!--        Options    -->
         <TextView
+            android:tag="1"
             android:id="@+id/option1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -82,9 +86,11 @@
             android:text="Compiler"
             android:padding="15dp"
             android:textSize="18sp"
+            android:onClick="onOptionClick"
             />
 
         <TextView
+            android:tag="2"
             android:id="@+id/option2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -95,9 +101,11 @@
             android:text="Interpreters"
             android:padding="15dp"
             android:textSize="18sp"
+            android:onClick="onOptionClick"
             />
 
         <TextView
+            android:tag="3"
             android:id="@+id/option3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -105,12 +113,14 @@
             android:layout_margin="10dp"
             android:gravity="center"
             android:textColor="#363A43"
-            android:text="Both (A) and (B)"
+            android:text="Both (A)  (B)"
             android:padding="15dp"
             android:textSize="18sp"
+            android:onClick="onOptionClick"
             />
 
         <TextView
+            android:tag="4"
             android:id="@+id/option4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -121,9 +131,11 @@
             android:text="None of the above"
             android:padding="15dp"
             android:textSize="18sp"
+            android:onClick="onOptionClick"
             />
 
         <Button
+            android:id="@+id/submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Submit"
@@ -131,6 +143,7 @@
             android:layout_margin="10dp"
             android:paddingVertical="15dp"
             android:textSize="18sp"
+            android:onClick="OnSubmit"
             />
 
 
